--- a/tisuos/Makefile
+++ b/tisuos/Makefile
@@ -9,6 +9,7 @@ INCLUDES=
 LINKER_SCRIPT=-Tsrc/lds/virt.lds
 TYPE=debug
 RUST_TARGET=./target/riscv64gc-unknown-none-elf/$(TYPE)
+KERNEL_ELF=$(RUST_TARGET)/tisuos
 LIBS=-L$(RUST_TARGET)
 SOURCES_ASM=$(wildcard src/asm/*.S)
 LIB=-l tisuos -lgcc
@@ -25,8 +26,8 @@ MEM=512M
 DISK=hd.dsk
 DRIVER = -device virtio-gpu-device -device\
  virtio-net-device -device virtio-tablet-device\
- -device virtio-keyboard-device -DRIVER if=none,format=raw,file=$(DISK),id=foo\
- -device virtio-blk-device,scsi=off,DRIVER=foo
+ -device virtio-keyboard-device -drive if=none,format=raw,file=$(DISK),id=foo\
+ -device virtio-blk-device,scsi=off,drive=foo
 
 
 build:
@@ -34,7 +35,7 @@ build:
 # $(CC) $(CFLAGS) $(LINKER_SCRIPT) $(INCLUDES) -o $(OUT) $(SOURCES_ASM) $(LIBS) $(LIB)
 	
 run: build
-	$(QEMU) -machine $(MACH) -cpu $(CPU) -smp $(CPUS) -m $(MEM) $(DRIVER) -nographic -serial mon:stdio -bios none -kernel $(RUST_TARGET)
+	$(QEMU) -machine $(MACH) -cpu $(CPU) -smp $(CPUS) -m $(MEM) $(DRIVER) -nographic -serial mon:stdio -bios none -kernel $(KERNEL_ELF)
 
 
 .PHONY: clean
