更换并修复页表映射、elf加载；添加用户程序 user_lib

--- a/tisuos/Makefile
+++ b/tisuos/Makefile
@@ -23,18 +23,25 @@ MACH=virt
 CPU=rv64
 CPUS=4
 MEM=512M
-DISK=hd.dsk
+DISK1=hd.dsk
+DISK2=img
 DEVICE = -device virtio-tablet-device\
- -device virtio-keyboard-device -drive if=none,format=raw,file=$(DISK),id=foo\
- -device virtio-blk-device,scsi=off,drive=foo
+ -device virtio-keyboard-device\
+ -drive if=none,format=raw,file=$(DISK1),id=foo -device virtio-blk-device,scsi=off,drive=foo\
+ -drive if=none,format=raw,file=$(DISK2),id=fo1 -device virtio-blk-device,scsi=off,drive=fo1
 
 NET_DEVICE = -device virtio-net-device
 GPU_DEVICE = -device virtio-gpu-device
 
-build:
-	cargo build
+build: env
+	cargo build --target=riscv64gc-unknown-none-elf
 # $(CC) $(CFLAGS) $(LINKER_SCRIPT) $(INCLUDES) -o $(OUT) $(SOURCES_ASM) $(LIBS) $(LIB)
-	
+
+env:
+	(rustup target list | grep "riscv64gc-unknown-none-elf (installed)") || rustup target add $(TARGET)
+	rustup component add rust-src
+	rustup component add llvm-tools-preview
+
 run: build
 	$(QEMU) -machine $(MACH) -cpu $(CPU) -smp $(CPUS) -m $(MEM) $(DEVICE) \
 	-nographic -serial mon:stdio -bios none -kernel $(KERNEL_ELF)
